crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_agg_sum_avg.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [$0 AS total, $1 AS mean]
  Aggregate keys=[] aggs=[sum($0.salary), avg($0.salary)]
    Source (:Person AS $0)
