crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_create_rel_chain.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
Source (:Person AS $1)
WriteOps:
  CreateRel ($0)-[:KNOWS]->($1)
