crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_delete_multiple.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
Expand ($0)-[(->) $1]->( AS $2)
  Source (AS $0)
WriteOps:
  Delete [$1]
