crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_detach_delete_node.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
Filter (($0.name = "Alice"))
  Source (:Person AS $0)
WriteOps:
  DetachDelete [$0]
