crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_expand_undirected.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [$0 AS n, $2 AS m]
  Expand ($0)-[:RELATED(-) $1]->( AS $2)
    Source (AS $0)
